# trial-prioritizer

./: .env.example  .gitignore  CLAUDE.md  README.md  build_fallback.py  demo_greenlight.py  pyproject.toml  rubric.md  run.py  session-log.md  verifier.md  verify_overclaim_catch.py
premortem/: __init__.py  adjudication.py  builder.py  config.py  greenlight.py  job.py  log.py  loop.py  memory.py  retrieval.py  schemas.py
protocols/: anti_tau_antibody.json  naive_nterminal.json  naive_nterminal_killlist.json
web/: README.md  app.py  sample_run.json
web/runs/: 20260613T211603Z-fallback.json
web/static/: app.js  index.html  styles.css
